k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microhaplot2
  namespace: tools
spec:
  selector:
    app: microhaplot2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3838
  type: ClusterIP
